--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,23 +4,22 @@
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "ホーム",   root_path %></li>
-        <li><%= link_to "About",   about_path %></li>
+        <li><%= link_to "このアプリについて",   about_path %></li>
         <% if logged_in? %>
-        <li><%= link_to "Users", users_path %></li>
         <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Account <b class="caret"></b>
         </a>
         <ul class="dropdown-menu">
-         <li><%= link_to "Profile", current_user %></li>
-         <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+         <li><%= link_to "プロフィール", current_user %></li>
+         <li><%= link_to "設定の変更", edit_user_path(current_user) %></li>
          <li class="divider"></li>
          <li>
-         <%= link_to "log out", logout_path, method: :delete %>
+         <%= link_to "ログアウト", logout_path, method: :delete %>
          </li>
          </ul>
          </li>
          <% else %>
-        <li><%= link_to "Log in", login_path %></li>
+        <li><%= link_to "ログイン", login_path %></li>
         <% end %>
       </ul>
     </nav>
